# Dungeon-Crawler-2.5D

./: CMakeLists.txt  DebugLog.txt  README.md  TestWidget.xml  emcc_generate.py
DungeonCrawler/: CMakeLists.txt
DungeonCrawler/src/API/SDL/: SDLWidgetRenderer.cpp  SDLWidgetRenderer.h  sdl_render_target.h  sdl_window.cpp  sdl_window.h
DungeonCrawler/src/Actor/: player_controller.cpp  player_controller.h
DungeonCrawler/src/Component/: sprite_component.cpp
DungeonCrawler/src/Engine/: game_engine.cpp  game_engine.h  input_manager.cpp  script_manager.cpp
DungeonCrawler/src/Graphics/: render_target.h  scene_renderer.cpp  scene_renderer.h
DungeonCrawler/src/Misc/: chai_bindings.cpp
DungeonCrawler/src/Object/: object.h  objectptr.cpp  objectptr.h  objectptr_base.h  objectrefhandle.cpp  weak_objectptr.cpp
DungeonCrawler/src/Platform/Emscripten/: emscripten_window.h
DungeonCrawler/src/Platform/Windows/: windows_ime_manager.cpp  windows_ime_manager.h  windows_window.h
DungeonCrawler/src/Resource/: font_res.cpp  res_ptr.cpp  res_ptr.h  resource_manager.h  texture_res.cpp
DungeonCrawler/src/Text/: config_reader.cpp  config_reader.h  input_method_manager.h  null_input_method_manager.h  text_input_method_context.h
DungeonCrawler/src/UI/Core/: widgettransform.h
DungeonCrawler/src/UI/Interfaces/: widget_renderer.h
DungeonCrawler/src/UI/Managers/: WidgetManager.cpp  WidgetManager.h
DungeonCrawler/src/UI/Visual/: image_visual.cpp  text_visual.cpp
DungeonCrawler/src/UI/Widgets/: button_widget.cpp  text_input_widget.cpp  text_input_widget.h  text_widget.cpp  text_widget.h  widget.cpp
DungeonCrawler/src/Window/: window.cpp  window.h
DungeonCrawler/src/World/: level.cpp  level.h
Editor/: CMakeLists.txt
Editor/src/: editor.cpp  editor.h  editor_window.cpp  editor_window.h  game_view.cpp  game_view.h  main.cpp  map_editor_view.cpp  map_editor_view.h
Game/: CMakeLists.txt
Game/src/: main.cpp
NativeUI/: CMakeLists.txt
NativeUI/src/: button.cpp  button.h  control.cpp  control.h  message_box.h  panel.cpp  panel.h  types.h  user_control.cpp  user_control.h  window.cpp  window.h
resources/chaiscript/: DCGameManager.chai  MainMenuWidget.chai  NewGameWidget.chai  ScriptFiles.txt  TestClass.chai  TestLevel.chai  TestWidget.chai
src/: main.cpp
src/API/SDL/: SDLWidgetRenderer.cpp  SDLWidgetRenderer.h
src/Actor/: actor.cpp  actor.h
src/Component/: component.h  script_component.cpp
src/Engine/: game_engine.cpp  game_engine.h  input_listener.h  input_manager.cpp  input_manager.h  script_manager.cpp  script_manager.h
src/Graphics/: scene_renderer.cpp  scene_renderer.h  texture.cpp
src/Misc/: chai_bindings.cpp
src/Object/: class.cpp  objdefs.h  object.h  objectptr.cpp  objectptr.h  objectrefhandle.h  weak_objectptr.cpp  weak_objectptr.h
src/Resource/: resource.h  resource_manager.cpp  resource_manager.h  texture_res.h
src/UI/Core/: text_style.cpp  text_style.h  widgettransform.cpp
src/UI/Interfaces/: widget_renderer.h
src/UI/Managers/: WidgetManager.cpp  WidgetManager.h
src/UI/Visual/: colour_visual.h  image_visual.cpp  image_visual.h  text_visual.cpp  text_visual.h  visual.h
src/UI/Widgets/: button_widget.cpp  button_widget.h  image_widget.cpp  image_widget.h  text_widget.cpp  text_widget.h  visual_widget.cpp  visual_widget.h  widget.cpp  widget.h
src/Window/: window.cpp  window.h
src/World/: level.h  world.cpp
